name:           postnikov-simulation
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         ncrashed

executable postnikov-simulation
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   
                   base >= 4,
                   vty-ui >=1.8 && <1.9,
                   text >=1.2.0 && <1.3,
                   aivika >=3.0 && <3.1,
                   array >=0.5.0 && <0.6,
                   vty >=5.2.5 && <5.3
  ghc-options:     -Wall -threaded
  extensions:      OverloadedStrings

